// Diato - Reverse Proxying for Hipsters
//
// Copyright 2016-2017 Dolf Schimmel
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package modsec;

// import "github.com/golang/protobuf/ptypes/empty";
// import "google.protobuf.empty";
// import "google/protobuf/empty.proto";
import "github.com/golang/protobuf/ptypes/empty/empty.proto";

service ModuleModsec {
    rpc GetRules(google.protobuf.Empty) returns (RuleSets) {}
}

message RuleSets {
    repeated RuleSet RuleSets = 1;
}

message RuleSet {
    string rules = 1;

    // Worker is not supposed to do anything with the
    // filename, other than display it to the user in
    // case it contains errors
    string filename = 2;
}